--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-beautiful-dnd": "13.1.0",
+    "react-big-calendar": "0.36.0",
     "react-bootstrap": "github:mattermost/react-bootstrap#c6957962364e0818a51bbfd13e89919903b422d6",
     "react-color": "2.19.3",
     "react-contextmenu": "2.14.0",
@@ -131,6 +132,7 @@
     "@types/node": "16.3.1",
     "@types/react": "16.9.49",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-big-calendar": "0.33.2",
     "@types/react-bootstrap": "0.32.22",
     "@types/react-color": "3.0.4",
     "@types/react-custom-scrollbars": "4.0.7",
