--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "prettier": "2.3.2",
     "process": "0.11.10",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
+    "react": "16.14.0",
     "react-beautiful-dnd": "13.1.0",
     "react-big-calendar": "0.36.0",
     "react-bootstrap": "github:mattermost/react-bootstrap#c6957962364e0818a51bbfd13e89919903b422d6",
@@ -65,7 +65,9 @@
     "react-contextmenu": "2.14.0",
     "react-custom-scrollbars": "4.2.1",
     "react-day-picker": "7.4.10",
-    "react-dom": "16.13.1",
+    "react-dnd": "14.0.4",
+    "react-dnd-html5-backend": "14.0.2",
+    "react-dom": "16.14.0",
     "react-hot-loader": "4.13.0",
     "react-intl": "5.20.10",
     "react-is": "16.13.1",
@@ -125,7 +127,7 @@
     "@types/jquery": "3.5.5",
     "@types/katex": "0.11.0",
     "@types/lodash": "4.14.170",
-    "@types/luxon":"2.0.2",
+    "@types/luxon": "2.0.2",
     "@types/mark.js": "8.11.5",
     "@types/marked": "0.7.4",
     "@types/moment-timezone": "0.5.30",
